--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+
 }
 
 android {
@@ -49,4 +50,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
